--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: auto;
   text-align: center;
+  background-color: burlywood;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .logo {
@@ -39,4 +44,9 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.header {
+  margin-top: 0;
+  padding: 1rem;
 }
